Coveo: Resolved issue where coveo results would overflow on mobile (#368)

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -1212,6 +1212,11 @@ main {
 /* MARK: Coveo
 */
 
+.search {
+  display: flex;
+  justify-content: center;
+}
+
 /* Search results on content */
 atomic-search-interface#search-v2 {
   position: relative;
